[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "parcomb"
version = "0.12.0"
description = "Parser combinators library"
readme = "README.md"
authors = [{ name = "Tobias Wennergren", email = "wennergr@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
]
keywords = ["parser", "parser-combinators"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pip-tools"]

[project.urls]
Homepage = "https://github.com/wennergr/parcomb"
